# FosaGate-AI-Protocole

./: .gitignore  ARCHITECTURE.md  foundry.toml
off-chain/api/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
off-chain/api/src/: index.ts  test-api.ts
off-chain/api/src/middleware/: auth.ts  rateLimit.ts
off-chain/api/src/routes/: agents.ts  evaluate.ts  policies.ts  verdicts.ts
off-chain/api/src/types/: evaluator.d.ts
off-chain/api/src/websocket/: liveVerdicts.ts
off-chain/evaluator/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
off-chain/evaluator/src/: index.spec.ts  index.ts
off-chain/evaluator/src/ai/: patternMatcher.ts  riskModel.ts
off-chain/evaluator/src/analyzer/: balanceImpact.ts  contractScorer.ts  mevDetector.ts  slippageChecker.ts
off-chain/evaluator/src/attestation/: schema.ts  signer.ts
src/: AgentRegistry.sol  FosaGateRouter.sol  VerdictLog.sol
src/interfaces/: IAgentRegistry.sol  IFosaGateRouter.sol  IRiskEngine.sol  IVerdictLog.sol
stylus/: Cargo.toml
stylus/src/: attestation.rs  blacklist.rs  lib.rs  scoring.rs
test/: FosaGateRouter.t.sol
test/mocks/: MockRiskEngine.sol  MockTarget.sol
