[package]
name = "fosagate-risk-engine"
version = "0.1.0"
edition = "2021"
authors = ["rbd3"]
description = "FosaGate AI Protocol — RiskEngine Stylus Contract. Performance-critical attestation verification and risk scoring compiled to WASM for Arbitrum."
license = "MIT"

[dependencies]
# Arbitrum Stylus SDK — core framework for writing Stylus contracts
stylus-sdk = "0.10.7"
# Alloy primitives — Address, B256, U256, etc.
alloy-primitives = { version = "0.8.0", default-features = false }
# Alloy SOL types — Solidity ABI encoding/decoding in Rust
alloy-sol-types = { version = "0.8.0", default-features = false }
# Tiny-keccak — keccak256 hashing (for attestation hash verification)
tiny-keccak = { version = "2.0", features = ["keccak"] }
# k256 — secp256k1 ECDSA (for signature recovery/verification)
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"       # Optimize for size (WASM binary size matters for deployment cost)
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for maximum optimization
strip = true          # Strip debug symbols
